@@ -126,6 +126,12 @@ have been regenerated by this task.</p>
       is(are) modified.  <em>since Ant 1.8.0.</em></td>
     <td valign="top" align="center">No, defaults to false</td>
   </tr>
+  <tr>
+    <td valign="top">failOnNoReplacements</td>
+    <td valign="top">Whether to fail the build if the task didn't do
+      anything.  <em>since Ant 1.8.0.</em></td>
+    <td valign="top" align="center">No, defaults to false</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;replace file=&quot;${src}/index.html&quot; token=&quot;@@@&quot; value=&quot;wombat&quot;/&gt;</pre>
